
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.1-rc1
====================================
- [#MODX-2325] Updated Czech translation
- [#MODX-2329] Login page now auto-focuses on username textfield
- Add missing modCategoryClosure to create_tables script in setup
- [#MODX-2280] Fixed bugs with IE and package management
- Prevent issue where a User Group can select itself as a parent
- Allow typeahead on user field when adding a User to a User Group
- Optimized Resource Group tree in mgr UI
- Fixed issue where > 20 records were not showing in ACL lists in User Group edit panel
- [#MODX-2206] Prevent issue where renaming a menu's lexicon key orphans child menus
- Fixed rendering bugs in file edit panel, as well as optimized its loading and streamlined RTE integration on the panel
- [#MODX-2202] Removed deprecated modAction objects to prevent confusion
- [#MODX-2325] Updated Swedish translation
- Prevent bug that causes modal to overlap welcome screen
- Allow non-empty responses to OnBeforeTVFormSave to prevent save
- [#MODX-2201] Ensure MODX_PROCESSORS_PATH is upgraded correctly on upgrades where the core is moved
- [#MODX-2323] Allow non-empty responses to OnBeforeDocFormSave to prevent save
- [#MODX-2309] Ensure upload files button always uses the active node as the path, or if it is a file, its parent directory
- [#MODX-2295] Ensure menuindex can be overridden in resource creation if auto_menuindex is set to true
- Fixes to resource panels to adjust widths, loading of values properly
- [#MODX-2318] Fixes to TVs in Resource pages to make order sorting work correctly
- Abstracted setup database methods to driver-specific structures to accomodate for various future db drivers
- [#MODX-2241] Added archive_with setting so users with improper ZipArchive compiles can switch back to PCLZip