@@ -42,7 +42,6 @@ MODx.panel.SymLink = function(config) {
                     ,listeners: {
                         'select': {fn: this.templateWarning,scope: this}
                     }
-                    ,value: config.record.template || MODx.config.default_template
                 }]
             },{
                 columnWidth: .30
