@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.1-rc1
 ====================================
+- Fixed issue where default template was overriding empty template resources
 - [#MODX-2325] Updated Czech translation
 - [#MODX-2329] Login page now auto-focuses on username textfield
 - Add missing modCategoryClosure to create_tables script in setup
